# kingogfx

./: Cargo.toml  README.md  cbindgen.toml
.github/workflows/: build.yml
examples/: ffi_graphics_triangle.rs  ffi_graphics_triangle_hlsl.rs  ffi_window.rs  graphics.rs  graphics_triangle.rs  init.rs  rust_graphics_triangle.rs  rust_graphics_triangle_dx11.rs  rust_graphics_triangle_dx12.rs  rust_graphics_triangle_hlsl.rs  rust_window.rs  window.rs
src/: gl.rs  lib.rs  window.rs
src/graphics/: backend.rs  buffer.rs  device.rs  error.rs  ffi.rs  mod.rs  pipeline.rs  shader.rs  shader_compiler.rs  vertex_buffer.rs
src/graphics/backends/: mod.rs  opengl.rs
src/graphics/backends/directx11/: directx11_buffer.rs  directx11_graphics.rs  directx11_pipeline.rs  directx11_shader.rs  directx11_swapchain.rs  mod.rs
src/graphics/backends/directx12/: directx12_buffer.rs  directx12_graphics.rs  directx12_pipeline.rs  directx12_shader.rs  directx12_swapchain.rs  mod.rs
src/graphics/backends/opengl/: backend.rs  mod.rs  opengl_backend.rs  opengl_buffer.rs  opengl_graphics.rs  opengl_pipeline.rs  opengl_shader.rs  opengl_vertex_buffer.rs  vertex_buffer.rs
src/graphics/backends/vulkan/: mod.rs  vulkan_buffer.rs  vulkan_graphics.rs  vulkan_pipeline.rs  vulkan_shader.rs  vulkan_swapchain.rs
src/window/: backend.rs  builder.rs  error.rs  events.rs  ffi.rs  handle.rs  input.rs  mod.rs
src/window/backends/: glfw.rs  mod.rs
