[package]
name = "kingogfx"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib","cdylib", "staticlib"]

[dependencies]
glfw = "0.61.0"
glfw-sys = { version = "7.0.0", features = ["static-link"] }
gl = "0.14.0"

# DirectX 11/12 backends (Windows only; code is cfg-gated)
windows = { version = "0.59.0", features = [
	"Win32_Foundation",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D_Fxc",
	"Win32_Graphics_Direct3D11",
	"Win32_Graphics_Direct3D12",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Security",
	"Win32_System_Threading",
	"Win32_UI_WindowsAndMessaging",
] }

# Vulkan backend
ash = "0.38.0"
shaderc = "0.9"
